Online-accounts not properly removed if the window is closed without dismissing the notification
To reproduce:
- Remove an online account
- Close the window (without waiting for the notification to be dismissed)
- Start g-c-c again
- Open the online-account panel
Current behavior: The account has NOT been removed.
Expected result: The account has been removed.