online-accounts: Complete account removal in cc_goa_panel_finalize()

When removing an online account, gnome-control-center gives the user
the possibility to undo the action showing an "undo notification".
Right now if you close the gnome-control-center window, without dismissing
the notification, the online account will not be properly removed.

https://gitlab.gnome.org/GNOME/gnome-control-center/issues/25